--- a/index.html
+++ b/index.html
@@ -1,57 +1,100 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-Class</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>E-Class</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header>
-    <h1>E-Class</h1>
-  </header>
+    <header>
+        <h1>E-Class</h1>
+    </header>
 
-  <main>
-    <!-- Page de début -->
-    <section id="start-page">
-      <div class="card">
-        <h2>Se connecter</h2>
-        <p>Sur notre plateforme, vous pouvez suivre vos formations, consulter les catalogues, et bien plus encore.</p>
-        <button onclick="navigateTo('login-page')">Se connecter</button>
-      </div>
+    <nav>
+        <a href="#page-accueil">Accueil</a>
+        <a href="#page-connexion">Connexion</a>
+        <a href="#catalogue-formation">Catalogue de Formation</a>
+        <a href="#choix-formation">Choix de Formation</a>
+        <a href="#validation-choix">Validation Choix</a>
+        <a href="#suivre-competences">Suivre ses Compétences</a>
+        <a href="#faq">FAQ</a>
+    </nav>
+
+    <section id="page-accueil">
+        <h2>Page d'Accueil</h2>
+        <p>Sur notre plateforme, vous pouvez consulter le catalogue de formations, sélectionner les cours qui vous
+            intéressent, suivre les leçons, passer les examens, réaliser vos devoirs, consulter vos notes, obtenir des
+            réponses à vos questions et donner votre avis sur chaque cours auquel vous avez participé.</p>
     </section>
 
-    <!-- Page de connexion -->
-    <section id="login-page" class="hidden">
-      <div class="card">
-        <h2>Connection</h2>
-        <form id="login-form">
-          <label for="email">E-mail étudiant (obligatoire)</label>
-          <input type="email" id="email" required>
-          <label for="password">Mot de passe (obligatoire)</label>
-          <input type="password" id="password" required>
-          <button type="submit">Se connecter</button>
+    <section id="page-connexion">
+        <h2>Page de Connexion</h2>
+        <form>
+            <label for="email">E-mail étudiant (obligatoire) :</label><br>
+            <input type="email" id="email" required><br><br>
+            <label for="password">Mot de passe (obligatoire) :</label><br>
+            <input type="password" id="password" required><br><br>
+            <button type="submit">Se connecter</button>
         </form>
-      </div>
+        <a href="#page-accueil" class="back-button">Retour</a>
     </section>
 
-    <!-- Catalogue de formation -->
-    <section id="catalog-page" class="hidden">
-      <div class="card">
+    <section id="catalogue-formation">
         <h2>Catalogue de Formation</h2>
-        <form id="catalog-form">
-          <select>
-            <option>Power BI</option>
-            <option>Talend</option>
-            <option>MySQL</option>
-            <option>ETL</option>
-          </select>
-          <button type="submit">Continuer</button>
+        <form>
+            <label for="formation">Sélectionnez une formation :</label><br>
+            <select id="formation">
+                <option value="powerbi">Power BI</option>
+                <option value="talend">Talend</option>
+                <option value="mysql">MySQL</option>
+                <option value="etl">ETL</option>
+            </select><br><br>
+            <button type="button" id="catalogue-continue">Continuer</button>
         </form>
-      </div>
+        <a href="#page-accueil" class="back-button">Retour</a>
     </section>
-  </main>
 
-  <script src="script.js"></script>
+    <section id="choix-formation">
+        <h2>Choix de Formation</h2>
+        <form>
+            <label><input type="checkbox" value="powerbi"> Power BI</label><br>
+            <label><input type="checkbox" value="talend"> Talend</label><br>
+            <label><input type="checkbox" value="mysql"> MySQL</label><br>
+            <label><input type="checkbox" value="etl"> ETL</label><br><br>
+            <button type="button" id="choix-continue">Continuer</button>
+        </form>
+        <a href="#page-accueil" class="back-button">Retour</a>
+    </section>
+
+    <section id="validation-choix" style="display: none;">
+        <h2>Validation du Choix</h2>
+        <p>Votre choix a été validé ! Redirigez-vous vers la section des compétences pour commencer votre formation.</p>
+        <button onclick="location.href='#suivre-competences'">Suivre ses Compétences</button>
+        <a href="#page-accueil" class="back-button">Retour</a>
+    </section>
+
+    <section id="suivre-competences" style="display: none;">
+        <h2>Suivre ses Compétences</h2>
+        <ul>
+            <li><a href="#passer-examen">Passer un Examen</a></li>
+            <li><a href="#devoirs">Devoirs</a></li>
+            <li><a href="#voir-notes">Voir les Notes</a></li>
+            <li><a href="#feedback">Feedback</a></li>
+        </ul>
+        <a href="#page-accueil" class="back-button">Retour</a>
+    </section>
+
+    <section id="faq">
+        <h2>FAQ</h2>
+        <p>Consultez les questions fréquentes ou posez une nouvelle question.</p>
+        <button>Poser une nouvelle question</button>
+        <a href="#page-accueil" class="back-button">Retour</a>
+    </section>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
